--- a/package.json
+++ b/package.json
@@ -3,15 +3,22 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "autoprefixer": "^9.7.2",
+    "chroma-js": "^2.1.0",
+    "d3": "^5.14.2",
+    "lodash": "^4.17.15",
+    "node-sass": "^4.13.0",
+    "postcss-cli": "^6.1.3",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
-    "react-scripts": "3.2.0"
+    "react-scripts": "3.2.0",
+    "tailwindcss": "^1.1.3",
+    "zdog": "^1.1.1"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "build:style": "tailwind build src/index.css -o src/tailwind.css",
+    "start": "yarn run build:style && react-scripts start",
+    "build": "yarn run build:style && react-scripts build"
   },
   "eslintConfig": {
     "extends": "react-app"
