--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "chroma-js": "^2.1.0",
     "d3": "^5.14.2",
     "lodash": "^4.17.15",
+    "mathjs": "^6.2.5",
     "node-sass": "^4.13.0",
+    "numeric": "^1.2.6",
     "postcss-cli": "^6.1.3",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
