--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "postcss-cli": "^6.1.3",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
+    "react-mathjax": "^1.0.1",
     "react-scripts": "3.2.0",
     "tailwindcss": "^1.1.3",
     "zdog": "^1.1.1"
